<resources>
    <string name="app_name">Appcent NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_photo">News Photo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="more_read">More Read</string>
    <string name="news_sources">News Source</string>
    <string name="publish">Publish</string>
    <string name="author">Author</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_fragment">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_title">News Title</string>
</resources>